--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 .card {
     width: 90%;
     max-width: 470px;
-    background: linear-gradient(135deg, #00fe2a, #54798a);
+    background: linear-gradient(135deg, #0026fe, #54798a);
     color: #fff;
     margin: 100px auto 0;
     border-radius: 20px;
@@ -60,12 +60,12 @@ body {
 }
 
 .temp {
-    font-size: 70px; /* Increased size */
+    font-size: 70px;
     font-weight: 400;
 }
 
 .weather h1 {
-    font-size: 60px; /* Added missing size */
+    font-size: 60px;
     font-weight: 400;
 }
 
@@ -97,4 +97,8 @@ body {
 .humidity, .wind {
     font-size: 28px;
     margin-top: -6px;
+}
+
+.weather {
+    display: none;
 }
