--- a/style.css
+++ b/style.css
@@ -18,6 +18,12 @@ body {
     border-radius: 20px;
     padding: 40px 35px;
     text-align: center;
+    position: relative;
+    overflow: hidden;
+}
+
+.card.text-black {
+    color: #000;
 }
 
 .search {
@@ -122,6 +128,10 @@ body {
     color: #fff;
 }
 
+.local-time.text-black {
+    color: #000;
+}
+
 .view-more {
     background: #ebfffc;
     color: #555;
@@ -139,7 +149,19 @@ body {
     padding: 0 20px;
 }
 
+.detail-item {
+    display: flex;
+    align-items: center;
+    margin: 5px 0;
+}
+
+.detail-icon {
+    width: 30px;
+    height: 30px;
+    margin-right: 10px;
+}
+
 .more-details p {
     font-size: 18px;
-    margin: 5px 0;
+    margin: 0;
 }
